# iron_renamer

./: CHANGELOG.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  build.rs  rust-toolchain.toml  todo.md
.github/workflows/: ci.yml  release.yml
packaging/: Info.plist  install.sh  iron_renamer.desktop  macos_app.sh
packaging/windows/: AppxManifest.xml  package.ps1
src/: batch.rs  cli.rs  e2e.rs  engine.rs  gui.rs  main.rs  meta.rs  presets.rs  tags.rs
src/batch/: export.rs  history.rs  tests.rs  touch.rs
src/engine/: apply.rs  files.rs  parse.rs  tests.rs
src/gui/: callbacks.rs  model.rs  preview.rs
tests/: cli.rs
ui/: main.slint
